--- a/src/main/resources/org/georgiancollege/week07/book-chart-view.fxml
+++ b/src/main/resources/org/georgiancollege/week07/book-chart-view.fxml
@@ -6,9 +6,11 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.georgiancollege.week07.BookChartController">
@@ -18,7 +20,7 @@
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="32.0" prefWidth="229.0" text="View Chart" BorderPane.alignment="CENTER" />
          </top>
          <center>
-            <BarChart fx:id="barChart" BorderPane.alignment="CENTER">
+            <BarChart fx:id="barChart" animated="false" BorderPane.alignment="CENTER">
               <xAxis>
                 <CategoryAxis fx:id="categoryAxis" side="BOTTOM" />
               </xAxis>
@@ -37,6 +39,14 @@
                </padding>
             </HBox>
          </bottom>
+         <right>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="30.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#addNewBook_onClick" text="Add New Data" />
+                  <RadioButton fx:id="availableRadioButton" mnemonicParsing="false" onAction="#availableRadioButton_onClick" text="Available" />
+               </children>
+            </VBox>
+         </right>
       </BorderPane>
    </children>
 </AnchorPane>
